Refactor the ServiceImpl out or the REST related code

--- a/server/src/main/resources/application.conf
+++ b/server/src/main/resources/application.conf
@@ -3,6 +3,6 @@ akka {
 }
 
 spray.servlet {
-  boot-class = "com.missive.server.Boot"
+  boot-class = "com.missive.server.rest.Boot"
   request-timeout = 1s
 }
