--- a/android-client/AndroidManifest.xml
+++ b/android-client/AndroidManifest.xml
@@ -6,50 +6,52 @@
 
     <uses-sdk
         android:minSdkVersion="10"
-        android:targetSdkVersion="17" />
+        android:targetSdkVersion="19" />
 
-    <uses-permission android:name="android.permission.INTERNET" />
+    <supports-screens
+        android:anyDensity="true"
+        android:largeScreens="true"
+        android:normalScreens="true" />
 
-    <permission
-        android:name="com.missive.permission.MAPS_RECEIVE"
-        android:protectionLevel="signature" />
-
-    <uses-permission android:name="com.missive.permission.MAPS_RECEIVE" />
-    <!-- Allows the API to access Google web-based services. -->
-    <uses-permission android:name="com.google.android.providers.gsf.permission.READ_GSERVICES" />
-    <!-- Allows Internet access. -->
-    <uses-permission android:name="android.permission.INTERNET" />
-    <!-- Allows the API to cache map tile data in the device's external storage area. -->
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
-    <!-- Allows the API to use WiFi or mobile cell data (or both) to determine the device's location. -->
-    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
-    <!-- Allows the API to use GPS to determine the device's location to within a very small area. -->
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 
-    <!-- Google Maps Android API v2 requires OpenGL ES version 2 -->
     <uses-feature
-        android:glEsVersion="0x00020000"
-        android:required="true" />
+        android:name="android.hardware.location.network"
+        android:required="false" />
+    <uses-feature
+        android:name="android.hardware.location.gps"
+        android:required="false" />
+    <uses-feature
+        android:name="android.hardware.telephony"
+        android:required="false" />
+    <uses-feature
+        android:name="android.hardware.wifi"
+        android:required="false" />
 
     <application
-        android:name="com.missive.app.context.MissiveApp"
         android:allowBackup="true"
-        android:icon="@drawable/ic_launcher"
-        android:label="@string/app_name"
-        android:theme="@style/AppTheme" >
-        <meta-data
-            android:name="com.google.android.maps.v2.API_KEY"
-            android:value="AIzaSyBOnKNHN8E6YDrOZc1SEc4n9n6ZoF6EiKc" />
+        android:hardwareAccelerated="true"
+        android:icon="@drawable/icon"
+        android:label="@string/app_name" >
 
-        <!-- If required set to true, the app won't be installable on devices without map support -->
+        <!-- all applications based on this code should get their own CloudMade key -->
+        <meta-data
+            android:name="CLOUDMADE_KEY"
+            android:value="BC9A493B41014CAABB98F0471D759707" />
+
         <uses-library
             android:name="com.google.android.maps"
             android:required="false" />
 
         <activity
-            android:name=".activity.DisplayMapActivity"
-            android:configChanges="orientation"
-            android:label="Display Map Activity" >
+            android:name=".activity.MapActivity"
+            android:icon="@drawable/icon"
+            android:label="@string/map_activity_label" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -57,22 +59,5 @@
             </intent-filter>
         </activity>
     </application>
-    <!--
-    <application
-        android:allowBackup="true"
-        android:icon="@drawable/ic_launcher"
-        android:label="@string/app_name"
-        android:theme="@style/AppTheme" >
-        <activity
-            android:name="com.missive.activity.DisplayMapActivity"
-            android:label="@string/app_name" >
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-        </activity>
-    </application>
-    -->
 
 </manifest>
