Added support for tracking user's location.

--- a/android-client/AndroidManifest.xml
+++ b/android-client/AndroidManifest.xml
@@ -34,6 +34,7 @@
         android:required="false" />
 
     <application
+        android:name="com.missive.app.context.MissiveApp"
         android:allowBackup="true"
         android:hardwareAccelerated="true"
         android:icon="@drawable/icon"
